update docs format
